--- a/sophia-1.html
+++ b/sophia-1.html
@@ -2,8 +2,8 @@
 <html lang="EN" dir="ltr">
 <head>
     <title>Color Coded Reading</title>
-    <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="./my_style.css">
+    <link rel="icon" type="image/png" href="image/favicon.png">
+    <link rel="stylesheet" href="my_style.css">
 </head>
 <body>
     <header>
@@ -23,11 +23,11 @@
                 </article>
                 <div>
                     <ul class="purple">
-                        <li><img src="./purple_1.png" alt="bookcover">Harry Potter 3</li>
-                        <li><img src="./purple_2.png" alt="bookcover">Tree Full of Stars</li>
-                        <li><img src="./purple_3.png" alt="bookcover">You Can Find Me in the Wind</li>
-                        <li><img src="./purple_4.png" alt="bookcover">Purple Prose</li>
-                        <li><img src="./purple_5.png" alt="bookcover">Spells for Lost Things</li>
+                        <li><img src="image/purple_1.png" alt="bookcover">Harry Potter 3</li>
+                        <li><img src="image/purple_2.png" alt="bookcover">Tree Full of Stars</li>
+                        <li><img src="image/purple_3.png" alt="bookcover">You Can Find Me in the Wind</li>
+                        <li><img src="image/purple_4.png" alt="bookcover">Purple Prose</li>
+                        <li><img src="image/purple_5.png" alt="bookcover">Spells for Lost Things</li>
                     </ul>
                 </div>
             </div>
@@ -40,11 +40,11 @@
                 </article>
                 <div>
                     <ul class="green">
-                        <li><img src="./green_1.png" alt="bookcover">Harry Potter 7</li>
-                        <li><img src="./green_2.png" alt="bookcover">The Secret Garden</li>
-                        <li><img src="./green_3.png" alt="bookcover">Golden Soil</li>
-                        <li><img src="./green_4.png" alt="bookcover">Quality Design</li>
-                        <li><img src="./green_5.png" alt="bookcover">Trees of the Emerald Sea</li>
+                        <li><img src="image/green_1.png" alt="bookcover">Harry Potter 7</li>
+                        <li><img src="image/green_2.png" alt="bookcover">The Secret Garden</li>
+                        <li><img src="image/green_3.png" alt="bookcover">Golden Soil</li>
+                        <li><img src="image/green_4.png" alt="bookcover">Quality Design</li>
+                        <li><img src="image/green_5.png" alt="bookcover">Trees of the Emerald Sea</li>
                     </ul>
                 </div>
             </div>
@@ -57,11 +57,11 @@
                 </article>
                 <div>
                     <ul class="blue">
-                        <li><img src="./blue_1.png" alt="bookcover">Harry Potter 6</li>
-                        <li><img src="./blue_2.png" alt="bookcover">Seeing What's Invisible</li>
-                        <li><img src="./blue_3.png" alt="bookcover">Journey to the Stars</li>
-                        <li><img src="./blue_4.png" alt="bookcover">When I See Blue</li>
-                        <li><img src="./blue_5.png" alt="bookcover">Life of Pi</li>
+                        <li><img src="image/blue_1.png" alt="bookcover">Harry Potter 6</li>
+                        <li><img src="image/blue_2.png" alt="bookcover">Seeing What's Invisible</li>
+                        <li><img src="image/blue_3.png" alt="bookcover">Journey to the Stars</li>
+                        <li><img src="image/blue_4.png" alt="bookcover">When I See Blue</li>
+                        <li><img src="image/blue_5.png" alt="bookcover">Life of Pi</li>
                     </ul>
                 </div>
             </div>
