--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="shelf_1">
+        <div class="shelf_1 shelf">
           <h2>Shelf One</h2>
           <article class="poem">
             <p>In fields of lavender,</p>
@@ -24,27 +24,29 @@
           <div>
             <ul class="purple">
               <li>
-                <img src="image/purple_1.png" alt="bookcover" />Harry Potter 3
+                <img src="image/purple_1.png" alt="bookcover" />
+                <span>Harry Potter 3</span>
               </li>
               <li>
-                <img src="image/purple_2.png" alt="bookcover" />Tree Full of
-                Stars
+                <img src="image/purple_2.png" alt="bookcover" />
+                <span>Tree Full of Stars</span>
               </li>
               <li>
-                <img src="image/purple_3.png" alt="bookcover" />You Can Find Me
-                in the Wind
+                <img src="image/purple_3.png" alt="bookcover" />
+                <span>You Can Find Me in the Wind</span>
               </li>
               <li>
-                <img src="image/purple_4.png" alt="bookcover" />Purple Prose
+                <img src="image/purple_4.png" alt="bookcover" />
+                <span>Purple Prose</span>
               </li>
               <li>
-                <img src="image/purple_5.png" alt="bookcover" />Spells for Lost
-                Things
+                <img src="image/purple_5.png" alt="bookcover" />
+                <span>Spells for Lost Things</span>
               </li>
             </ul>
           </div>
         </div>
-        <div class="shelf_2">
+        <div class="shelf_2 shelf">
           <h2>Shelf Two</h2>
           <article class="poem">
             <p>Amidst nature's grace,</p>
@@ -54,25 +56,29 @@
           <div>
             <ul class="green">
               <li>
-                <img src="image/green_1.png" alt="bookcover" />Harry Potter 7
+                <img src="image/green_1.png" alt="bookcover" />
+                <span>Harry Potter 7</span>
               </li>
               <li>
-                <img src="image/green_2.png" alt="bookcover" />The Secret Garden
+                <img src="image/green_2.png" alt="bookcover" />
+                <span>The Secret Garden</span>
               </li>
               <li>
-                <img src="image/green_3.png" alt="bookcover" />Golden Soil
+                <img src="image/green_3.png" alt="bookcover" />
+                <span>Golden Soil</span>
               </li>
               <li>
-                <img src="image/green_4.png" alt="bookcover" />Quality Design
+                <img src="image/green_4.png" alt="bookcover" />
+                <span>Quality Design</span>
               </li>
               <li>
-                <img src="image/green_5.png" alt="bookcover" />Trees of the
-                Emerald Sea
+                <img src="image/green_5.png" alt="bookcover" />
+                <span>Trees of the Emerald Sea</span>
               </li>
             </ul>
           </div>
         </div>
-        <div class="shelf_3">
+        <div class="shelf_3 shelf">
           <h2>Shelf Three</h2>
           <article class="poem">
             <p>Beneath the sky's embrace,</p>
@@ -82,20 +88,26 @@
           <div>
             <ul class="blue">
               <li>
-                <img src="image/blue_1.png" alt="bookcover" />Harry Potter 6
+                <img src="image/blue_1.png" alt="bookcover" />
+                <span>Harry Potter 6</span>
               </li>
               <li>
-                <img src="image/blue_2.png" alt="bookcover" />Seeing What's
+                <img src="image/blue_2.png" alt="bookcover" />
+                <span>Seeing What's</span>
                 Invisible
               </li>
               <li>
-                <img src="image/blue_3.png" alt="bookcover" />Journey to the
+                <img src="image/blue_3.png" alt="bookcover" />
+                <span>Journey to the</span>
                 Stars
               </li>
               <li>
-                <img src="image/blue_4.png" alt="bookcover" />When I See Blue
+                <img src="image/blue_4.png" alt="bookcover" />
+                <span>When I See Blue</span>
               </li>
-              <li><img src="image/blue_5.png" alt="bookcover" />Life of Pi</li>
+              <li><img src="image/blue_5.png" alt="bookcover" />
+                <span>Life of Pi</span>
+              </li>
             </ul>
           </div>
         </div>
