update header and footer style

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="EN" dir="ltr">
   <head>
     <title>Color Coded Reading</title>
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/x-icon" href="./image/favicon.ico" />
     <link rel="stylesheet" href="./my_style.css" />
   </head>
   <body>
     <header>
       <div class="container">
         <h1>Color Coded Reading</h1>
-        <nav></nav>
       </div>
     </header>
     <main>
+      <p id="dividimg">hey</p>
       <div class="container">
         <div class="shelf_1 shelf">
           <h2>Shelf One</h2>
@@ -105,7 +105,8 @@
                 <img src="image/blue_4.png" alt="bookcover" />
                 <span>When I See Blue</span>
               </li>
-              <li><img src="image/blue_5.png" alt="bookcover" />
+              <li>
+                <img src="image/blue_5.png" alt="bookcover" />
                 <span>Life of Pi</span>
               </li>
             </ul>
@@ -114,7 +115,8 @@
       </div>
     </main>
     <footer>
-      <div class="container">
+      <div class="footercontainer">
+        <img src="./image/bgheader.jpg" alt="heart clipped bookcover" id="footerclip">
         <h3>decoder@sophia</h3>
       </div>
     </footer>
