update footerclip style with transform and transition

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="footercontainer">
         <img
           src="./image/bgheader.jpg"
-          alt="heart clipped bookcover"
+          alt="arrow shaped bookcover"
           id="footerclip"
         />
         <h3>decoder@sophia</h3>
